<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_versao">V 0.0.1</string>
    <string name="app_name">Post-credits</string>
    <string name="app_email">contato.poscreditos@gmail.com</string>
    <string name="app_slogan">Find your inner critic!</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="nav_header_title">Post-credits</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_home">Home</string>
    <string name="navigation_drawer_avaliar">Rate</string>
    <string name="navigation_drawer_consultar">Consult</string>
    <string name="navigation_drawer_contato">Contact</string>
    <string name="sem_filmes_toast_consultar">There are no rates to show</string>
    <string name="kebab_sobre">About</string>
    <string name="kebab_autores">Developers</string>
    <string name="kebab_logout" translatable="false">Logout</string>
    <string name="home_titulo">Home</string>
    <string name="home_estatisticas">Statistics</string>
    <string name="avaliar_titulo">Rate</string>
    <string name="avaliar_texto">1. Search for a movie</string>
    <string name="avaliar_filme">Title</string>
    <string name="avaliar_ano">Year</string>
    <string-array name="avaliar_lingua">
        <item>Portuguese</item>
        <item>English</item>
        <item>Spanish</item>
    </string-array>
    <string name="avaliar_buscar">Search</string>
    <string name="avaliar_resultados_titulo">Rate</string>
    <string name="avaliar_resultados_texto">Search for</string>
    <string name="avaliar_resultados_sub">results</string>
    <string name="avaliar_resultados_null">No results found!</string>
    <string name="avaliar_resultados_internet">No internet connection!</string>
    <string name="avaliar_filme_titulo">Rate</string>
    <string name="avaliar_filme_data">Watched on:</string>
    <string name="avaliar_filme_comentario">Leave your comment...</string>
    <string name="avaliar_filme_avaliar">Rate</string>
    <string name="avaliar_filme_sucesso">Rating saved</string>
    <string name="avaliar_filme_falha">Operation failed</string>
    <string name="contato_titulo">Contact</string>
    <string name="contato_texto">Leave us a message!</string>
    <string name="contato_nome">E-mail</string>
    <string name="contato_assunto">Subject</string>
    <string name="contato_mensagem">Message</string>
    <string name="contato_enviar">Send</string>
    <string name="contato_sucesso">Contact sent</string>
    <string name="contato_falha">Send failed!</string>
    <string name="sobre_titulo">About</string>
    <string name="sobre_texto">Post-credits allows you to save movie ratings to consult when you want! Our movie library keeps up to date through The Open Movie Database API</string>
    <string name="sobre_adicional">Project developed as a partial part of subject G_SI700A_2019S2 - Mobile Devices Programming, from School of Technology by UNICAMP, taught by Doctor Professor Ulisses Martins Dias</string>
    <string name="autores_titulo">Developers</string>
    <string name="autores_texto">This project was entirely developed by students below who coursed Information Systems at UNICAMP</string>
    <string name="autores_anos">years old</string>
    <string name="consultar_titulo">Consult</string>
    <string name="consultar_avaliacoes">Your rates</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">769635683481516</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb769635683481516</string>
    <string name="filmes_em_alta">Trending movies</string>
    <string name="mostrar_detalhes_popup">Show details</string>
    <string name="avaliar_filme_popup">Rate this movie</string>
    <string name="detalhes_titulo">Details</string>
    <string name="detalhes_avaliacao">Rate</string>
    <string name="detalhes_data_lancamento">Release date</string>
    <string name="detalhes_sinopse">Overview</string>
    <string name="detalhes_genero">Genre</string>
    <string name="home_filmes_assistidos_titulo">Watched movies</string>
    <string name="home_filmes_assistidos_descricao">$ movies watched this month.</string>
    <string name="home_avaliacao_media_titulo">Average rating</string>
    <string name="home_avaliacao_media_descricao">$ is the average of your rates.</string>
    <string name="home_genero_favorito_titulo">Favorite gender</string>
    <string name="home_genero_favorito_descricao">The most watched gender is $. </string>
    <string name="sem_avaliacoes_text">You haven\'t rated any movies yet.</string>
</resources>
