<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_drawer_home"
            android:icon="@drawable/navigation_drawer_home"
            android:title="@string/navigation_drawer_home" />
        <item
            android:id="@+id/navigation_drawer_avaliar"
            android:icon="@drawable/navigation_drawer_avaliar"
            android:title="@string/navigation_drawer_avaliar" />
        <item
            android:id="@+id/navigation_drawer_consultar"
            android:icon="@drawable/navigation_drawer_consultar"
            android:title="@string/navigation_drawer_consultar" />
        <item
            android:id="@+id/navigation_drawer_contato"
            android:icon="@drawable/navigation_drawer_contato"
            android:title="@string/navigation_drawer_contato" />
    </group>

</menu>
