<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".gui.outros.ContatoFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp"
        android:text="@string/contato_texto"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/contato_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contato_nome"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/contato_assunto"
        android:inputType="textEmailSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contato_assunto"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/contato_mensagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="5"
        android:gravity="top"
        android:hint="@string/contato_mensagem"
        android:textSize="16dp" />

    <Button
        android:id="@+id/contato_enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/contato_enviar" />

</LinearLayout>