<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".gui.avaliar.BuscarFilmesFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp"
        android:text="@string/avaliar_texto"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/text_filme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/avaliar_filme"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/text_ano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/avaliar_ano"
        android:textSize="16dp" />

    <Button
        android:id="@+id/button_buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/avaliar_buscar"/>
</LinearLayout>