<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".viewController.avaliar.AvaliarFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp"
        android:text="@string/avaliar_texto"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/avaliar_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/avaliar_titulo"
        android:textSize="16dp"
        android:singleLine="true"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:paddingBottom="32dp">
        <EditText
            android:inputType="number"
            android:id="@+id/avaliar_ano"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_width="400px"
            android:layout_height="wrap_content"
            android:hint="@string/avaliar_ano"
            android:textSize="16dp" />
        <Spinner
            android:id="@+id/avaliar_tipo"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/avaliar_tipo"
            android:textSize="16dp">
        </Spinner>
    </GridLayout>

    <Button
        android:id="@+id/avaliar_buscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/avaliar_buscar"/>
</LinearLayout>